gcc/testsuite/rust/rustc/ui/generic-associated-types/unknown-lifetime-ice-119827.rs
trait Foo {
// { dg-error ".E0391." "" { target *-*-* } .-1 }
    type Context<'c>
    where
        Self: 'c;
}

impl Foo for Box<dyn Foo> {}

fn main() {}

